Integrate X-editable and ClassRoster API 1. X-editable in editmodule page for easier module name editing 2. Decluttering -Removed old editmodule code AND modulemanagement from html and js files due to it being obsolete now. Everything shifted to editmodule page 3. Removed .btn-default colour to avoid clashes in colours 4. Added code to fetch students in a module (ClassRoster API) but need much work and testing still 5. ActivityList database needs to be updated when module name changes

--- a/client/main.css
+++ b/client/main.css
@@ -831,7 +831,3 @@ ul.alert-dropdown {
   border-radius: 15%;
 }
 
-.btn-default{
-  background-color: #3B3B3B;
-}
-
